# anonymous-trait

./: Cargo.toml  README.md
examples/: async_fn.rs
src/: attr_syntax.rs  closure_expr.rs  closure_type.rs  construct.rs  impl_syntax.rs  impl_trait.rs  lib.rs  packed_struct.rs
