[package]
name = "anonymous-trait"
version = "0.1.2"
edition = "2021"
description = "Anonymous trait implementation with capturing the environment"
categories = ["rust-patterns"]
keywords = ["anonymous", "closure"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/ryo33/anonymous-trait"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }

[dev-dependencies]
pretty_assertions = "1.4.0"
tokio = { version = "1", features = ["macros", "rt"] }
mockall = "0.12"
